--- a/test/Makefile
+++ b/test/Makefile
@@ -8,6 +8,8 @@ NOCOLOR = '\033[0m'
 
 TESTS = test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 test12 test13 test13v2 test14 test15 test16 test17 42test1 42test2 42test3 42test4 42test5 42test6 42test7
 
+# TESTS = test1
+
 all: $(TESTS)
 	@echo ${YELLOW}[Running $(TESTS)]${NOCOLOR}
 	@./run.sh $(TESTS)
@@ -17,5 +19,4 @@ clean:
 	rm -rf $(TESTS)
 
 $(TESTS): %: %.c
-	# @$(CC) -D DEBUG $(CFLAGS) -L.. -lft_malloc $(INCL) -o $@ $<
 	@$(CC) $(CFLAGS) -L.. -lft_malloc $(INCL) -o $@ $<
