--- a/test/Makefile
+++ b/test/Makefile
@@ -1,22 +1,22 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror -g
 
-INCL = -I ../inc -I ../libft/inc
+INCL = -I ../inc
 
-YELLOW = '\033[33m'
-NOCOLOR = '\033[0m'
+YELLOW = "\033[33m"
+NOCOLOR = "\033[0m"
 
-TESTS = test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 test12 test13 test13v2 test14 test15 test16 test17 42test1 42test2 42test3 42test4 42test5 42test6 42test7
-
-# TESTS = test1
+TESTS = malloc_test free_test realloc_test rlimit_test test1 test1 test2 test3 test4 test5 test6 test7
 
 all: $(TESTS)
-	@echo ${YELLOW}[Running $(TESTS)]${NOCOLOR}
+	@echo ${YELLOW}Running [$(TESTS)]${NOCOLOR}
 	@./run.sh $(TESTS)
 
 clean:
-	rm -rf $(addsuffix .dSYM, $(TESTS))
-	rm -rf $(TESTS)
+	@echo ${YELLOW}Cleaning $(TESTS)${NOCOLOR}
+	@rm -rf $(addsuffix .dSYM, $(TESTS))
+	@rm -rf $(TESTS)
 
 $(TESTS): %: %.c
+	@echo ${YELLOW}Compiling $<${NOCOLOR}
 	@$(CC) $(CFLAGS) -L.. -lft_malloc $(INCL) -o $@ $<
