--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,8 @@ INCL = -I ../inc
 YELLOW = "\033[33m"
 NOCOLOR = "\033[0m"
 
-TESTS = malloc_test free_test realloc_test test1 test2 test3 test4 test5 test6 test7
+TESTS = malloc_test free_test realloc_test test0 test1 test2 test3 test4 test5 test6 test7
+# TESTS = test1 test2
 
 all: $(TESTS)
 	@echo ${YELLOW}Running [$(TESTS)]${NOCOLOR}
@@ -17,6 +18,8 @@ clean:
 	@rm -rf $(addsuffix .dSYM, $(TESTS))
 	@rm -rf $(TESTS)
 
+re: clean all
+
 $(TESTS): %: %.c
 	@echo ${YELLOW}Compiling $<${NOCOLOR}
-	@$(CC) $(CFLAGS) -L.. -lft_malloc $(INCL) -o $@ $<
+	@$(CC) -L.. $(CFLAGS) $(INCL) -o $@ $< -lft_malloc -pthread
